--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ captures/
 .idea/libraries
 .idea/caches
 
+# Android Studio 3 in .gitignore file.
+.idea/caches/build_file_checksums.ser
+.idea/modules.xml
+
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
 #*.jks
