--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,13 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home"></activity>
+            android:label="@string/title_activity_home" />
+        <activity
+            android:name=".DriverActivity"
+            android:label="@string/title_activity_driver" />
+        <activity
+            android:name=".PassengerActivity"
+            android:label="@string/title_activity_passenger"></activity>
     </application>
 
 </manifest>
